# Gaming-Provisioning-

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  RESEARCH.md  alembic.ini  docker-compose.docker.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  database.py  main.py  models.py  schemas.py  seed.py  settings.py  state.py  worker.py
app/api/: routes.py
app/provisioners/: __init__.py  base.py  docker.py  factory.py  fake.py
app/services/: auth.py  resources.py  system_status.py
app/ui/: control_panel.html
docs/: CODE_WALKTHROUGH.md  FLASHCARDS_AND_LABS.md  GLOSSARY.md  INTERVIEW_GUIDE.md  LOCAL_RUNTIME_VALIDATION.md  SECURITY_CHECKLIST.md  STUDY_GUIDE.md  TinyProvisioner_Interview_Guide.docx  VPS_RUNBOOK.md  ~$nyProvisioner_Interview_Guide.docx
migrations/: env.py
migrations/versions/: 202606240001_initial_schema.py
provisioned_templates/tiny-python-http-app/: Dockerfile  app.py
scripts/: build_interview_guide_docx.py  smoke_test.py
tests/: conftest.py  test_auth_api.py  test_compose_config.py  test_control_panel.py  test_docker_provisioner.py  test_fake_provisioner.py  test_quota_cleanup.py  test_resource_lifecycle.py  test_resources_api.py  test_smoke_script.py  test_state.py  test_system_status.py  test_worker.py  test_worker_startup.py
