[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-provisioner"
version = "0.1.0"
description = "Learning-first compute provisioning service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "docker>=7.1",
  "fastapi>=0.115",
  "passlib[argon2]>=1.7",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.12",
  "redis>=5.0",
  "rq>=1.16",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
